package com.tetras;

public class BlackDwarf extends BadGuy {
}