package com.tetras;

public class DemandeRecuperationPierreInfinite {

    private BadGuy demandeur;

    public BadGuy getDemandeur() {
        return demandeur;
    }

    public DemandeRecuperationPierreInfinite(BadGuy demandeur) {
        this.demandeur = demandeur;
    }

}