package com.tetras;

public class PierreInfinite {
    
}