package com.tetras;

public class Thanos extends BadGuy {
}