package com.tetras.avengers;

import com.tetras.BadGuy;

public interface Avengers {

    public boolean gagneCombatContre(BadGuy personnage);

}