@startuml ChainOfResponsability

abstract BadGuy {
    - gant: List<PierreInfinite>
    + recupererPierreInfinite(Temple): PierreInfinite
    + compterPierreGant(): int
}

class Thanos

class BlackDwarf

BlackDwarf -up-|> BadGuy
Thanos -up-|> BadGuy

class Temple {
    - protecteurs: List<Avengers>
    + ajouterProtecteur(Avengers)
    + recupererPierreInfinite(DemandeRecuperationPierreInfinite) : PierreInfinite
}

class DemandeRecuperationPierreInfinite {
    - demandeur: BadGuy
}

Temple -down-> DemandeRecuperationPierreInfinite : utilise 

class PierreInfinite

interface Avenger {
    + gagneCombatContre(BadGuy): boolean
}

Ironman .up.|> Avenger
Spiderman .up.|> Avenger
Thor .up.|> Avenger

@enduml